# automation-task-script

./: .gitignore  README.md  pyproject.toml
src/automation_task_script/: __init__.py  cli.py  organizer.py
tests/: _bootstrap.py  test_cli.py  test_organizer.py
